# llm-AgentStarter1

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: jupyter简易说明.md  protos文件说明.md  react风格agent说明.md  待优化内容.md  （请最先阅读本文档）.md
jupyters/: test.ipynb  test.txt
protos/: agent_example.proto
src/agent_example/client/: client.py
src/agent_example/server/: server.py  service.py  utils.py
tests/: start_server.py
